--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -8,6 +8,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - name: Install flake8
+        run: python3 -m pip install flake8
 
       - name: Run flake8
         run: flake8 .
